--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "express-validator": "^7.2.1",
+    "node-cache": "^5.1.2",
     "puppeteer": "^10.0.0"
   },
   "devDependencies": {
