--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "express-validator": "^7.2.1",
     "node-cache": "^5.1.2",
-    "puppeteer": "^10.0.0"
+    "puppeteer": "^10.0.0",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
