--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "PORT=8080 jest"
   },
   "author": "Felippe Freire",
   "license": "ISC",
@@ -20,6 +21,8 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^30.0.0",
+    "nodemon": "^2.0.7",
+    "supertest": "^7.1.1"
   }
 }
