--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "PORT=8080 jest",
+    "test": "jest",
     "docker": "docker run -p 3000:3000 scrap-docker",
     "docker-create": "docker build -t scrap-docker ."
   },
